[package]
name = "opensquare"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"
description = ""

[dependencies]
cli = { package = "opensquare-cli", path = "cli" }

[workspace]
members = [
    "cli",
    "runtime",
    "primitives",
    "rpc",
]

[profile.release]
panic = "unwind"
