[package]
name = "opensquare-cli"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
parking_lot = "0.10.0"

sc-cli = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-core = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-executor = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-service = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-network = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-basic-authorship = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }

opensquare-primitives = { path = "../primitives" }
opensquare-runtime = { path = "../runtime" }
opensquare-rpc = { path = "../rpc" }

[build-dependencies]
substrate-build-script-utils = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
