[package]
name = "opensquare-cli"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
futures = "0.3.4"
log = "0.4.8"
structopt = "0.3.8"
parking_lot = "0.11.0"
serde_json = "1.0"

sc-authority-discovery = { version = "0.8.0" }
sc-basic-authorship = { version = "0.8.0" }
sc-cli = { version = "0.8.0" }
sc-executor = { version = "0.8.0" }
sc-service = { version = "0.8.0" }
sc-transaction-pool = { version = "2.0.0" }
sc-network = { version = "0.8.0" }
sc-consensus-aura = { version = "0.8.0" }
sc-consensus = { version = "0.8.0" }
sc-finality-grandpa = { version = "0.8.0" }
sc-client-api = { version = "2.0.0" }
sc-rpc = { version = "2.0.0" }

sp-core = { version = "2.0.0" }
sp-inherents = { version = "2.0.0" }
sp-transaction-pool = { version = "2.0.0" }
sp-consensus-aura = { version = "0.8.0" }
sp-consensus = { version = "0.8.0" }
sp-finality-grandpa = { version = "2.0.0" }
sp-runtime = { version = "2.0.0" }

opensquare-primitives = { path = "../primitives" }
opensquare-runtime = { path = "../runtime" }
opensquare-rpc = { path = "../rpc" }

[build-dependencies]
substrate-build-script-utils = { version = "2.0.0" }
