[package]
name = "opensquare-rpc"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
jsonrpc-core = "14.2.0"

sc-client-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }

sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-keystore = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-blockchain = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-rpc-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sp-consensus = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-consensus-epochs = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
#sc-consensus-babe = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
#sc-consensus-babe-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
#sp-consensus-babe = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-finality-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
sc-finality-grandpa-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }

substrate-frame-rpc-system = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }
pallet-transaction-payment-rpc = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5" }

opensquare-primitives = { path = "../primitives" }
opensquare-runtime = { path = "../runtime" }

