[package]
name = "opensquare-runtime"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false, features = ["derive"] }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
static_assertions = "1.1.0"

# Substrate primitives
sp-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-block-builder = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-consensus-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-core = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-inherents = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-io = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-offchain = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-session = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-std = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-transaction-pool = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
sp-version = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }

# Substrate pallets
frame-executive = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
frame-support = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
frame-system = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
frame-system-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-aura = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-authorship = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-grandpa = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-im-online = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-randomness-collective-flip = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-sudo = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-offences = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-session = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false, features = ["historical"] }
pallet-timestamp = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }

pallet-balances = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-transaction-payment = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-transaction-payment-rpc-runtime-api = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-utility = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }
pallet-multisig = { git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }

opensquare-primitives = { path = "../primitives", default-features = false }

[build-dependencies]
wasm-builder-runner = { package = "substrate-wasm-builder-runner", git = "https://github.com/paritytech/substrate.git", tag = "v2.0.0-rc5", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",

    "sp-api/std",
    "sp-block-builder/std",
    "sp-consensus-aura/std",
    "sp-core/std",
    "sp-inherents/std",
    "sp-io/std",
    "sp-offchain/std",
    "sp-runtime/std",
    "sp-session/std",
    "sp-std/std",
    "sp-transaction-pool/std",
    "sp-version/std",

    "frame-executive/std",
    "frame-support/std",
    "frame-system/std",
    "frame-system-rpc-runtime-api/std",

    "pallet-aura/std",
    "pallet-authorship/std",
    "pallet-grandpa/std",
    "pallet-im-online/std",
    "pallet-randomness-collective-flip/std",
    "pallet-sudo/std",
    "pallet-session/std",
    "pallet-offences/std",
    "pallet-timestamp/std",

    "pallet-balances/std",
    "pallet-transaction-payment/std",
    "pallet-transaction-payment-rpc-runtime-api/std",
    "pallet-utility/std",
    "pallet-multisig/std",

    "opensquare-primitives/std",
]
