[package]
name = "ospallet-bounties"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

# Substrate
sp-std = { version = "2.0.0-rc5", default-features = false }
sp-runtime = { version = "2.0.0-rc5", default-features = false }

frame-support = { version = "2.0.0-rc5", default-features = false }
frame-system = { version = "2.0.0-rc5", default-features = false }

# orml
orml-traits = { path = "../../vendor/orml/traits", default-features = false }
orml-utilities = { path = "../../vendor/orml/utilities", default-features = false }

opensquare-primitives = { path = "../../primitives", default-features = false }
ospallet-support = { path = "../support", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",

    "sp-std/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",
    "orml-utilities/std",

    "opensquare-primitives/std",
    "ospallet-support/std",
]
