[package]
name = "ospallet-bounties"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.4", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }
impl-trait-for-tuples = "0.1.3"

# Substrate
sp-std = { version = "2.0.0", default-features = false }
sp-runtime = { version = "2.0.0", default-features = false }

frame-support = { version = "2.0.0", default-features = false }
frame-system = { version = "2.0.0", default-features = false }

# orml
orml-traits = { version = "0.3", default-features = false }
orml-utilities = { version = "0.3", default-features = false }
orml-tokens = { version = "0.3", default-features = false }

opensquare-primitives = { path = "../../primitives", default-features = false }
ospallet-support = { path = "../support", default-features = false }
ospallet-reputation = { path = "../reputation", default-features = false }
ospallet-mining = { path = "../mining", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",

    "sp-std/std",
    "sp-runtime/std",

    "frame-support/std",
    "frame-system/std",

    "orml-traits/std",
    "orml-utilities/std",
    "orml-tokens/std",

    "opensquare-primitives/std",
    "ospallet-support/std",
    "ospallet-reputation/std",
    "ospallet-mining/std",
]
