[package]
name = "ospallet-mining"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }

sp-runtime = { version = "2.0.0-rc6", default-features = false }

# Substrate
frame-support = { version = "2.0.0-rc6", default-features = false }
frame-system = { version = "2.0.0-rc6", default-features = false }

opensquare-primitives = { path = "../../primitives", default-features = false }

[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",

    "opensquare-primitives/std",
]

