[package]
name = "ospallet-reputation"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", default-features = false }
serde = { version = "1.0.101", optional = true, features = ["derive"] }

frame-support = { version = "2.0.0-rc5", default-features = false }
frame-system = { version = "2.0.0-rc5", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde/std",

    "frame-support/std",
    "frame-system/std",
]

