[package]
name = "ospallet-support"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[dependencies]
codec = { package = "parity-scale-codec", version = "1.3.1", features = ["derive"], default-features = false }
serde = { version = "1.0", optional = true }
hex-serde = { version = "0.1", optional = true }
hex = { version = "0.4", optional = true }

# Substrate primitives
sp-std = { version = "2.0.0-rc5", default-features = false }

# Substrate pallets
frame-support = { version = "2.0.0-rc5", default-features = false }

[features]
default = ["std"]
std = [
    "codec/std",
    "serde",
    "hex-serde",
    "hex",

    "sp-std/std",

    "frame-support/std",
]
