[package]
name = "ospallet-support"
version = "0.1.0"
authors = ["OpenSquare <https://github.com/opensquare-network/opensquare>"]
edition = "2018"

[dependencies]
hex = { version = "0.4", optional = true }
serde = { version = "1.0", optional = true }

# Substrate pallets
frame-support = { version = "2.0.0", default-features = false }

[dev-dependencies]
serde_json = "1.0"

[features]
default = ["std"]
std = [
    "serde",
    "hex",

    "frame-support/std",
]
